# Listado

./: .coverage  Dockerfile  compose.yaml  database.db  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
listado/: app.py  database.py  models.py  schemas.py  security.py
listado/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 63f306f7f1dc_exercicio_02_aula_04.py  8019f4e42062_adicionando_created_at_e_updated_at_na_.py  c18151be6650_create_todos_table.py  e8128cf77562_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py  test_todos.py  test_users.py
